APM 1.0.0beta3
----------------------------
Added:
- MySQL driver
- Per driver error reporting level

Changed:
- Code refactored to make use of 'APM drivers'

Fixed:
- APM cannot be compiled with PHP < 5.2.2
- Bug #17502: Drivers' rshutdown run only when slow_request tracking is enabled

APM 1.0.0beta2   29 Nov 2009
----------------------------
Fixed:
- Path used in tests were hardly fixed

APM 1.0.0beta1   29 Nov 2009
----------------------------
- Initial release.