@@ -29,6 +29,7 @@
 
 apm_driver_entry * apm_driver_sqlite3_create();
 void apm_driver_sqlite3_insert_event(int type, char * error_filename, uint error_lineno, char * msg, char * trace TSRMLS_DC);
+void apm_driver_sqlite3_insert_events(apm_event_entry * event_entry TSRMLS_DC);
 int apm_driver_sqlite3_minit(int);
 int apm_driver_sqlite3_rinit();
 int apm_driver_sqlite3_mshutdown();
